@@ -1,3 +1,5 @@
+20080614
+	change os/port/devcons.c to use error not panic in sysfatal
 20080612
 	change several libmp/port functions to use sysfatal not abort
 	change emu/port/main.c to have sysfatal call error not exit
